# seapig

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CNAME  LICENSE  Makefile  NEWS.md  README.md  README.qmd  _quarto.yml  great-docs.yml  index.qmd  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT  dependabot.yml
.github/workflows/: docker-build.yaml  docs.yaml  publish.yml  quarto.yaml  style.yaml  test.yaml
.pre-commit/: validate_commit_msg.py
dev/: example.py  risk_coverage_example.py  torchgeo.py
docker/: dev.ci
docs/: .gitignore  01-installation.qmd  02-quickstart.qmd  03-logging.qmd  04-contributing.qmd  quickstart.qmd  utils.py  version_config.py
docs/assets/: _styles-quartodoc.css  style.css  theme.scss
requirements/: dev.txt  docs.txt  required.txt  suggested.txt
seapig/: __init__.py  logging.py  metric.py  model.py  risk.py  risk_coverage.py
seapig/mockups/: __init__.py  mockups.py
seapig/scores/: __init__.py  base.py  dist.py  embed.py  index_handler.py  index_manager.py  knn.py  logits.py  pca.py  plot_utils.py  pyod.py  residual.py  risk_coverage.py  utils.py
seapig/scores/index/: __init__.py  handler.py
seapig/scores/index/adapters/: __init__.py  nmslib_handler.py
seapig/scores/knn/: __init__.py  knn.py
seapig/scores/knn/index/: __init__.py  handler.py  nmslib_handler.py
seapig/utils/: __init__.py  logging.py  progress.py
tests/: test_base.py  test_embed.py  test_embed_incremental.py  test_embed_integration.py  test_fit_unified.py  test_index_handler.py  test_index_manager.py  test_knn.py  test_knn_index_config.py  test_logging.py  test_logits.py  test_metric.py  test_metric_risk_coverage.py  test_metric_selective.py  test_model.py  test_model_state.py  test_pca.py  test_progress.py  test_pyod.py  test_residual.py  test_risk.py  test_risk_coverage.py  test_scores.py  test_scores_risk_coverage.py  test_scores_utils.py  test_selective_integration.py
