[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "seapig"
description = "Selective prediction based on confidence scores"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Darius A. Görgen", email = "info@dariusgoergen.com"},
]
maintainers = [
    {name = "Darius A. Görgen", email = "info@dariusgoergen.com"},
]
keywords = ["pytorch", "remote sensing", "area of applicability", "confidence scoring", "selective prediction"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://www.seapig.dev"
"Documentation" = "https://www.seapig.dev/reference"
"Codecov" = "https://app.codecov.io/gh/goergen95/seapig"
"Repository" = "https://github.com/goergen95/seapig"
"Issue Tracker" = "https://github.com/goergen95/seapig/issues"
"Changelog" = "https://www.seapig.dev/changelog"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/required.txt"] }
version = {attr = "seapig.__version__"}

[tool.setuptools.dynamic.optional-dependencies]
suggested = {file = ["requirements/suggested.txt"]}
dev = { file = ["requirements/dev.txt"] }
docs = { file = ["requirements/docs.txt", "requirements/suggested.txt"]}
all  = { file = [
    "requirements/suggested.txt",
    "requirements/dev.txt",
    "requirements/docs.txt",
] }

[tool.setuptools.package-data]
seapig = ["py.typed"]

[tool.setuptools.packages.find]
include = ["seapig*"]
exclude = ["tests*", "docs", "_extensions"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore: builtin type .* has no __module__ attribute:DeprecationWarning",
  "ignore: The '.*_dataloader' does not have many workers.*:UserWarning",
  "ignore: Query \\d+ returned fewer than \\d+ neighbors\\.",
  "ignore: GPU available but not used\\..*",
]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError"]

[tool.ruff]
exclude = ["build", "dist", "data", "docs", "env", "dev"]
extend-include = ["*.ipynb"]
fix = true
line-length = 80

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["ANN", "D"]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ty]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
missing-argument = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"

[[tool.ty.overrides]]
include = ["seapig/scores/knn.py"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
